@startuml "SeatSwift - Diagramme de classes"
skinparam Linetype ortho
allow_mixing

enum SeatType {
    Classic
    ReducedMobility
}

enum SeatStatus {
    Available
    Reserved
    OutOfService
}

enum RowStatus {
    Available
    OutOfService
}

enum SectionStatus {
    Available
    OutOfService
}

enum ShowStatus {
    ComingSoon
    Available
    Completed
    Canceled
}

enum ShowType {
    Concert
    Movie
    Theater
    Humor
}

enum TicketStatus {
    Available
    Sold
}

class Client {
    -id: int
    -IsActive: bool
    --
    +FirstName: string
    +LastName: string
    +Email: string
    +City: string
    +PasswordHash: Bytes[]
    +PasswordSalt: Bytes[]
    --
    +Client()
    +Client(FirstName: string, LastName: string, Email: string)
    --
}


class Order {
    -id: int
    -IsActive: bool
    --
    +OrderNumber: string
    +OrderDate: DateTime
    +OrderTotal: Decimal
    +Client: Client
    +Tickets: Ticket[]
    --
    +Order()
    +Order(OrderNumber: string, OrderDate: DateTime, OrderTotal: Decimal, Client: Client, Show: Show, Tickets: Ticket[])
    --
}

class Ticket {
    -id: int
    -IsActive: bool
    --
    +TicketNumber: string
    +TicketStatus: TicketStatus
    +Representation : Represantation
    +Seat: Seat
    --
    +Ticket()
    +Ticket(TicketNumber: string, TicketStatus: TicketStatus, Show: Show, Seat: Seat)
    --
}

class Accountant {
    -id: int
    -IsActive: bool
    --
    +FirstName: string
    +LastName: string
    +employeeNumber: string
    +Email: string
    +PhoneNumber: string
    +PasswordHash: Bytes[]
    +PasswordSalt: Bytes[]
    --
    +Accountant()
    +Accountant(FirstName: string, LastName: string, employeeNumber: string, Email: string, PhoneNumber: string)
    --
}

class Admin {
    +Admin()
    +Admin(FirstName: string, LastName: string, employeeNumber: string, Email: string, PhoneNumber: string)
    --
}

class Seat {
    -id: int
    IsActive: bool
    --
    +SeatNumber: int
    +SeatStatus: SeatStatus
    +SeatType: SeatType
    --
    +Seat()
    +Seat(SeatNumber: int, SeatStatus: SeatStatus, SeatType: SeatType)
    --
}

class Row {
    -id: int
    IsActive: bool
    --
    +RowNumber: int
    +RowStatus: RowStatus
    +Seats: Seat[]
    --
    +row()
    +row(RowNumber: int, Seats: Seat[])
    --
}

class Section {
    -id: int
    IsActive: bool
    --
    +SectionNumber: int
    +SectionStatus: SectionStatus
    +SectionMultiplier: Decimal
    +Rows: row[]
    --
    +Section()
    +Section(SectionNumber: int, SectionStatus: SectionStatus, SectionMultiplier: Decimal, Rows: row[])
    --
}

Class Auditorium {
    -id: int
    IsActive: bool
    --
    +AuditoriumName: string
    +Sections: Section[]
    --
    +Auditorium()
    +Auditorium(AuditoriumName: string, Sections: Section[])
    --
}

Class Configuration {
    -id: int
    IsActive: bool
    --
    +ConfigurationName: string
    +Auditorium: Auditorium
    --
    +Configuration()
    +Configuration(ConfigurationName: string, ConfigurationValue: string)
    --
}

class Show {
    -id: int
    IsActive: bool
    --
    +ShowName: string
    +Artist: string
    +ShowType: ShowType
    +ShowStatus: ShowStatus
    +description: string
    +NumberOfTicketsMaxByClient: int
    +BaseTicketPrice: Decimal
    +Image: string
    --
    +Show()
    +Show(ShowName: string, Artist: string, ShowType: ShowType, ShowDate: DateTime, ShowStatus: ShowStatus, Auditorium: Auditorium, description: string, NumberOfTicketsMaxByClient: int, BaseTicketPrice: Decimal)
    --
}

class Representation {
    -id: int
    IsActive: bool
    --
    +Show: Show
    +ShowDate: DateTime
    +Configuration : Configuration
    --
    +Representation()
    +Representation(Show: Show, ShowDate: DateTime, Configuration: Configuration)
    --
}

Admin -u-|> Accountant
Admin -- Show : Create

Show "1" o-- "1..*" Representation : has
Show -- ShowStatus : has
Show -- ShowType : has

Configuration "1..*" o-- "1" Auditorium : has
Configuration "1" o-- "1..*" Representation : has

Auditorium "1 " o-- " 1..*" Section : contains
Section "1" o-- " 1..*" Row : contains
Row "1" o-- " 1..*" Seat : contains
Row -- RowStatus : has

Seat -- SeatType : has
Seat -- SeatStatus : has

Section -- SectionStatus : has

Order "1" -- "0..*" Ticket : has
Order "0..*" -- "1 " Client : has

Ticket "1..*" -- "1" Representation : has
Ticket "1" -- "1" Seat : has
Ticket -- TicketStatus : has


@enduml